# src/routes/treasure.js
@@ -1,0 +1,8 @@
+const express = require("express");
+const controller = require("../controllers/treasure");
+const router = express.Router();
+const checkAuth = require('../middleware/auth');
+
+router.post("/findTreasureBoxes", checkAuth, controller.findTreasureBoxes);
+
+module.exports = router;
